<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/segundo_fundo"
    tools:context=".fragments.NumerosFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87" />

    <ImageButton
        android:id="@+id/imageOne"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:background="@null"
        android:contentDescription="@string/one"
        android:src="@drawable/um"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageTwo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:background="@null"
        android:contentDescription="@string/two"
        android:src="@drawable/dois"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageThree"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@null"
        android:contentDescription="@string/three"
        android:src="@drawable/tres"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageOne" />

    <ImageButton
        android:id="@+id/imageFour"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@null"
        android:contentDescription="@string/four"
        android:src="@drawable/quatro"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/imageTwo" />

    <ImageButton
        android:id="@+id/imageFive"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@null"
        android:contentDescription="@string/five"
        android:src="@drawable/cinco"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/imageThree" />

    <ImageButton
        android:id="@+id/imageSix"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@null"
        android:contentDescription="@string/six"
        android:src="@drawable/seis"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/imageFour" />

    <ImageView
        android:id="@+id/imageDireitos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/direitos"
        android:src="@drawable/direitos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline3" />
</androidx.constraintlayout.widget.ConstraintLayout>